<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/home" />



    <item
        android:id="@+id/navigation_chemin"
        android:icon="@drawable/ic_map_selector"
        android:title="@string/itineraries" />

    <item
        android:id="@+id/navigation_destinations"
        android:icon="@drawable/ic_empty"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/navigation_experiences"
        android:icon="@drawable/ic_compass_selector"
        android:title="@string/experiences" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_selector"
        android:title="@string/my_profile" />
</menu>